[package]
name = "sbv-kv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
alloy-primitives.workspace = true
rustc-hash.workspace = true
