[package]
name = "sbv-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sbv-primitives = { workspace = true, features = ["evm-types", "revm-types"] }

openvm-ecc-guest = { workspace = true, optional = true }
openvm-sha2 = { workspace = true, optional = true }
openvm-pairing = { workspace = true, optional = true }

[lints]
workspace = true

[features]
scroll = ["sbv-primitives/scroll-evm-types", "sbv-primitives/scroll-reth-types"]
openvm = [
    "dep:openvm-ecc-guest",
    "dep:openvm-sha2",
    "dep:openvm-pairing",
    "openvm-pairing/bn254",
    "sbv-primitives/openvm",
]
