[package]
name = "sbv-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sbv-primitives = { workspace = true, features = ["evm-types", "revm-types"] }

openvm-ecc-guest = { workspace = true, optional = true }
openvm-k256 = { workspace = true, optional = true }
openvm-sha2 = { workspace = true, optional = true }
openvm-pairing = { workspace = true, optional = true }
openvm-kzg = { workspace = true, optional = true }

[lints]
workspace = true

[features]
c-kzg = ["sbv-primitives/c-kzg"]
kzg-rs = ["sbv-primitives/kzg-rs"]

scroll = [
    "sbv-primitives/scroll-evm-types",
    "sbv-primitives/scroll-revm-types",
]
scroll-openvm = [
    "scroll",
    "openvm-bn254",
    "openvm-sha256"
]
ethereum-openvm = [
    "openvm-bn254",
    "openvm-kzg",
    "openvm-secp256k1",
    "openvm-sha256",
]

openvm-bn254 = [
    "dep:openvm-ecc-guest",
    "dep:openvm-pairing",
    "openvm-pairing/bn254",
]

openvm-kzg = [
    "dep:openvm-kzg",
]

openvm-secp256k1 = [
    "dep:openvm-ecc-guest",
    "dep:openvm-k256",
]

openvm-sha256 = [
    "dep:openvm-sha2"
]

