[package]
name = "sbv-primitives"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/primitives"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
itertools.workspace = true
tiny-keccak.workspace = true

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

alloy-consensus = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-evm = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

alloy-primitives.workspace = true

revm = { workspace = true, optional = true }
revm-scroll = { workspace = true, optional = true }
reth-chainspec = { workspace = true, optional = true }
reth-evm = { workspace = true, optional = true }
reth-evm-ethereum = { workspace = true, optional = true }
reth-ethereum-forks = { workspace = true, optional = true }
reth-execution-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-scroll-chainspec = { workspace = true, optional = true }
reth-scroll-evm = { workspace = true, optional = true }
reth-scroll-forks = { workspace = true, optional = true }
reth-scroll-primitives = { workspace = true, optional = true }

scroll-alloy-consensus = { workspace = true, optional = true }
scroll-alloy-evm = { workspace = true, optional = true }
scroll-alloy-rpc-types = { workspace = true, optional = true }
scroll-alloy-network = { workspace = true, optional = true }

sbv-helpers.workspace = true
sbv-kv.workspace = true

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true

[features]
# serialization
serde = ["dep:alloy-serde", "dep:serde", "reth-scroll-primitives?/serde"]

# features proxy
c-kzg = ["revm/c-kzg"]
kzg-rs = ["revm/kzg-rs"]

# core features switch
chainspec = ["dep:reth-chainspec"]
consensus-types = ["dep:alloy-consensus"]
eips = ["dep:alloy-eips"]
evm-types = ["dep:alloy-evm"]
network-types = ["dep:alloy-network"]
hardforks = ["dep:reth-ethereum-forks"]
reth-types = []
reth-primitives-types = [
  "consensus-types",
  "eips",
  "dep:reth-primitives",
  "dep:reth-primitives-traits",
]
reth-evm-types = ["reth-types", "dep:reth-evm", "dep:reth-evm-ethereum"]
reth-execution-types = ["reth-types", "dep:reth-execution-types"]
revm-types = ["dep:revm"]
rpc-types = ["dep:alloy-rpc-types-eth", "eips"]
ethereum-all = [
  "chainspec",
  "consensus-types",
  "eips",
  "evm-types",
  "network-types",
  "hardforks",
  "reth-types",
  "reth-primitives-types",
  "reth-evm-types",
  "reth-execution-types",
  "revm-types",
  "rpc-types",
]

scroll = []
scroll-compress-ratio = [
  "scroll",
  "scroll-evm-types",
  "dep:scroll-alloy-evm",
  "scroll-alloy-evm/std",
  "scroll-alloy-evm/zstd_compression"
]
scroll-chainspec = ["scroll", "chainspec", "dep:reth-scroll-chainspec"]
scroll-consensus-types = [
  "scroll",
  "consensus-types",
  "dep:scroll-alloy-consensus",
  "scroll-alloy-consensus/serde", # This is a bug
]
scroll-evm-types = ["evm-types", "dep:scroll-alloy-evm"]
scroll-hardforks = [
  "scroll",
  "hardforks",
  "dep:reth-scroll-forks",
  "reth-scroll-forks/serde",
]
scroll-network-types = ["scroll", "network-types", "dep:scroll-alloy-network"]
scroll-pre-deployed = ["scroll"]
scroll-reth-evm-types = [
  "scroll",
  "reth-evm-types",
  "scroll-reth-types",
  "dep:reth-scroll-evm",
]
scroll-reth-types = ["scroll", "reth-types"]
scroll-reth-primitives-types = [
  "scroll-consensus-types",
  "dep:reth-scroll-primitives",
]
scroll-revm-types = [
  "scroll",
  "revm-types",
  "dep:revm-scroll",
  "revm/optional_no_base_fee",
]
scroll-rpc-types = ["scroll", "rpc-types", "dep:scroll-alloy-rpc-types"]
scroll-all = [
  "ethereum-all",
  "scroll",
  "scroll-chainspec",
  "scroll-consensus-types",
  "scroll-evm-types",
  "scroll-hardforks",
  "scroll-pre-deployed",
  "scroll-network-types",
  "scroll-reth-evm-types",
  "scroll-reth-types",
  "scroll-reth-primitives-types",
  "scroll-revm-types",
  "scroll-rpc-types",
]

dev = ["dep:tracing"]

sp1 = []
cycle-tracker = []
