[package]
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/primitives"
name = "sbv-primitives"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
itertools.workspace = true
tiny-keccak.workspace = true

convert_case = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

alloy-consensus = { workspace = true, optional = true }
alloy-eips.workspace = true
alloy-evm = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

alloy-primitives.workspace = true

reth-chainspec = { workspace = true, optional = true }
reth-ethereum-forks = { workspace = true, optional = true }
reth-evm = { workspace = true, optional = true }
reth-evm-ethereum = { workspace = true, optional = true }
reth-execution-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-scroll-chainspec = { workspace = true, optional = true }
reth-scroll-evm = { workspace = true, optional = true }
reth-scroll-forks = { workspace = true, optional = true }
reth-scroll-primitives = { workspace = true, optional = true }
revm = { workspace = true, optional = true }
revm-scroll = { workspace = true, optional = true }

scroll-alloy-consensus = { workspace = true, optional = true }
scroll-alloy-evm = { workspace = true, optional = true }
scroll-alloy-network = { workspace = true, optional = true }
scroll-alloy-rpc-types = { workspace = true, optional = true }

sbv-helpers.workspace = true
sbv-kv.workspace = true

[dev-dependencies]
bincode.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
# serialization
serde = [
  "dep:alloy-serde",
  "dep:serde",
  "dep:serde_json",
  "dep:convert_case",
  "alloy-eips/serde",
  "reth-scroll-primitives?/serde",
]

# features proxy
c-kzg = ["revm/c-kzg"]
kzg-rs = ["revm/kzg-rs"]

# core features switch
chainspec = ["dep:reth-chainspec"]
consensus-types = ["dep:alloy-consensus"]
ethereum-all = [
  "chainspec",
  "consensus-types",
  "evm-types",
  "network-types",
  "hardforks",
  "reth-types",
  "reth-primitives-types",
  "reth-evm-types",
  "reth-execution-types",
  "revm-types",
  "rpc-types",
]
evm-types = ["dep:alloy-evm"]
hardforks = ["dep:reth-ethereum-forks"]
network-types = ["dep:alloy-network"]
reth-evm-types = ["reth-types", "dep:reth-evm", "dep:reth-evm-ethereum"]
reth-execution-types = ["reth-types", "dep:reth-execution-types"]
reth-primitives-types = [
  "consensus-types",
  "dep:reth-primitives",
  "dep:reth-primitives-traits",
]
reth-types = []
revm-types = ["dep:revm"]
rpc-types = ["dep:alloy-rpc-types-eth"]

scroll = []
scroll-all = [
  "ethereum-all",
  "scroll",
  "scroll-chainspec",
  "scroll-consensus-types",
  "scroll-evm-types",
  "scroll-hardforks",
  "scroll-pre-deployed",
  "scroll-network-types",
  "scroll-reth-evm-types",
  "scroll-reth-types",
  "scroll-reth-primitives-types",
  "scroll-revm-types",
  "scroll-rpc-types",
]
scroll-chainspec = ["scroll", "chainspec", "dep:reth-scroll-chainspec"]
scroll-compress-ratio = [
  "scroll",
  "scroll-evm-types",
  "dep:scroll-alloy-evm",
  "scroll-alloy-evm/std",
  "scroll-alloy-evm/zstd_compression",
]
scroll-consensus-types = [
  "scroll",
  "consensus-types",
  "dep:scroll-alloy-consensus",
  "scroll-alloy-consensus/serde", # This is a bug
]
scroll-evm-types = ["evm-types", "dep:scroll-alloy-evm"]
scroll-hardforks = [
  "scroll",
  "hardforks",
  "dep:reth-scroll-forks",
  "reth-scroll-forks/serde",
]
scroll-network-types = ["scroll", "network-types", "dep:scroll-alloy-network"]
scroll-pre-deployed = ["scroll"]
scroll-reth-evm-types = [
  "scroll",
  "reth-evm-types",
  "scroll-reth-types",
  "dep:reth-scroll-evm",
]
scroll-reth-primitives-types = [
  "scroll-consensus-types",
  "dep:reth-scroll-primitives",
]
scroll-reth-types = ["scroll", "reth-types"]
scroll-revm-types = [
  "scroll",
  "revm-types",
  "dep:revm-scroll",
  "revm/optional_no_base_fee",
]
scroll-rpc-types = ["scroll", "rpc-types", "dep:scroll-alloy-rpc-types"]

dev = ["dep:tracing"]

cycle-tracker = []
sp1 = []
