[package]
name = "sbv-primitives"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/primitives"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
itertools.workspace = true
rkyv = { workspace = true, optional = true }
serde.workspace = true
tracing = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-serde.workspace = true
alloy-primitives.workspace = true

revm = { workspace = true, optional = true }
revm-scroll = { workspace = true, optional = true }
reth-chainspec = { workspace = true, optional = true }
reth-evm = { workspace = true, optional = true }
reth-evm-ethereum = { workspace = true, optional = true }
reth-ethereum-forks = { workspace = true, optional = true }
reth-execution-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, features = ["serde-bincode-compat"] }
reth-primitives-traits = { workspace = true, features = ["serde", "serde-bincode-compat"] }
reth-scroll-chainspec = { workspace = true, optional = true }
reth-scroll-evm = { workspace = true, optional = true }
reth-scroll-forks = { workspace = true, optional = true }
reth-scroll-primitives = { workspace = true, optional = true }

scroll-alloy-consensus = { workspace = true, optional = true }
scroll-alloy-evm = { workspace = true, optional = true }
scroll-alloy-rpc-types = { workspace = true, optional = true }
scroll-alloy-network = { workspace = true, optional = true }

sbv-helpers.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true

[features]
# serialization
rkyv = ["dep:rkyv", "alloy-primitives/rkyv"]

# features proxy
c-kzg = ["revm/c-kzg"]
kzg-rs = ["revm/kzg-rs"]

# core features switch
chainspec = ["dep:reth-chainspec", "hardforks"]
evm-types = ["dep:alloy-evm"]
network-types = ["dep:alloy-network"]
hardforks = ["dep:reth-ethereum-forks"]
reth-evm-types = ["dep:reth-evm", "dep:reth-evm-ethereum"]
reth-execution-types = ["dep:reth-execution-types"]
revm-types = ["dep:revm"]
ethereum-all = [
  "chainspec",
  "evm-types",
  "network-types",
  "hardforks",
  "reth-evm-types",
  "reth-execution-types",
  "revm-types",
]

scroll = [
  "dep:reth-scroll-primitives",
  "dep:scroll-alloy-consensus",
  "dep:scroll-alloy-rpc-types",
  "reth-scroll-primitives/serde",
]
scroll-compress-ratio = [
  "scroll",
  "scroll-evm-types",
  "dep:scroll-alloy-evm",
  "scroll-alloy-evm/std",
  "scroll-alloy-evm/zstd_compression"
]
scroll-chainspec = ["scroll", "chainspec", "dep:reth-scroll-chainspec", "scroll-hardforks"]
scroll-evm-types = ["evm-types", "dep:scroll-alloy-evm"]
scroll-hardforks = [
  "scroll",
  "hardforks",
  "dep:reth-scroll-forks",
  "reth-scroll-forks/serde",
]
scroll-network-types = ["scroll", "network-types", "dep:scroll-alloy-network"]
scroll-reth-evm-types = [
  "scroll",
  "reth-evm-types",
  "dep:reth-scroll-evm",
  "dep:scroll-alloy-rpc-types",
]
scroll-revm-types = [
  "scroll",
  "revm-types",
  "dep:revm-scroll",
  "revm/optional_no_base_fee",
]
scroll-all = [
  "ethereum-all",
  "scroll",
  "scroll-chainspec",
  "scroll-evm-types",
  "scroll-hardforks",
  "scroll-network-types",
  "scroll-reth-evm-types",
  "scroll-revm-types",
]

dev = ["dep:tracing"]

sp1 = []
cycle-tracker = []
