[package]
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/sbv"
name = "sbv"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sbv-core.workspace = true
sbv-helpers.workspace = true
sbv-kv.workspace = true
sbv-primitives.workspace = true
sbv-trie.workspace = true
sbv-utils.workspace = true

[features]
serde = ["sbv-primitives/serde"]

c-kzg = ["sbv-primitives/c-kzg"]
kzg-rs = ["sbv-primitives/kzg-rs"]

dev = ["sbv-core/dev", "sbv-primitives/dev", "sbv-trie/dev"]
scroll = ["sbv-core/scroll", "sbv-primitives/scroll-all", "sbv-utils/scroll"]

# sp1 related
cycle-tracker = ["sbv-core/cycle-tracker", "sbv-primitives/cycle-tracker"]
sp1 = ["sbv-core/sp1", "sbv-primitives/sp1"]

ethereum-openvm = ["sbv-core/ethereum-openvm"]
scroll-openvm = ["sbv-core/scroll-openvm"]
