[package]
name = "stateful-block-verifier"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/bin"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["provider-http", "serde", "transport-http"] }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
revm.workspace = true
sled.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-retry.workspace = true
url.workspace = true

sbv = { workspace = true, features = ["sled"]}

tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["dev"]
dev = ["sbv/dev", "dep:tracing-subscriber"]
debug-account = ["sbv/debug-account"]
debug-storage = ["sbv/debug-storage"]

[lints]
workspace = true

