[package]
name = "sbv-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
reth-trie.workspace = true
reth-trie-sparse.workspace = true

sbv-primitives = { workspace = true, features = ["revm-types"] }
sbv-kv.workspace = true
sbv-helpers.workspace = true

thiserror.workspace = true
tracing = { workspace = true, optional = true }


[features]
dev = ["dep:tracing", "sbv-primitives/dev"]

sp1 = []
cycle-tracker = []
