[package]
name = "sbv-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-rlp.workspace = true
alloy-trie.workspace = true
reth-trie.workspace = true
reth-stateless.workspace = true
risc0-ethereum-trie = { workspace = true, features = ["serde"] }
sbv-primitives = { workspace = true, features = ["revm-types", "reth-evm-types"] }
tracing = { workspace = true, optional = true }

[features]
dev = ["dep:tracing", "sbv-primitives/dev"]

sp1 = []
cycle-tracker = []
