[package]
name = "sbv-utils-cli"
description = "Command line utilities for Stateless Block Verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["provider-http", "transport-http", "reqwest", "reqwest-rustls-tls", "json-rpc"] }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
console.workspace = true
indicatif.workspace = true
rkyv.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["limit"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url.workspace = true

sbv-primitives.workspace = true
sbv-utils.workspace = true

[lints]
workspace = true

[features]
scroll = ["sbv-primitives/scroll", "sbv-utils/scroll"]
