[package]
name = "evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
sbv-t8n = { path = "../t8n" }
serde_json = "1"

[lints]
workspace = true
